# ml-train-sdn-plugin

./: README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/ml_train/: model_io.h  network.h  tensor.h  training.h  types.h  xtce_parser.h
src/cpp/src/: model_io.cpp  network.cpp  tensor.cpp  training.cpp  xtce_parser.cpp
src/cpp/tests/: test_ml_train.cpp  test_sixdof.cpp
